# Posterfolio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: settings.example.json
docs/images/: PUT_SCREENSHOT_HERE.txt
packaging/: Posterfolio.iss  version_info.txt
src/poster_montage_designer/: .gitognore  CHANGELOG.md  CHANGELOG_M16.md  CHANGELOG_MILESTONE_15.md  README_FIX.txt  __main__.py  app.py  config.py  imdb_html_importer.py  imdb_scraper.py  models.py  paths.py
src/poster_montage_designer/dialogs/: about_dialog.py  export_dialog.py  imdb_import_dialog.py  settings_dialog.py  user_guide_dialog.py
src/poster_montage_designer/io/: imdb.py
src/poster_montage_designer/layouts/: grid.py
src/poster_montage_designer/services/: export_resolution.py  imdb_capture.py  posters.py  render.py  tmdb.py
src/poster_montage_designer/ui/: main_window.ui  ui_main_window.py
src/poster_montage_designer/widgets/: __init__.py  poster_visuals.py  title_list.py  workspace.py
src/poster_montage_designer/windows/: main_window.py
tools/: build_release.ps1  clean.bat  install.bat  qt.bat  run.bat  save.bat  status.bat  sync.bat  venv.bat
