[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posterfolio"
version = "1.0.0"
description = "Create high-quality poster montages from an IMDb filmography."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Charles Tait" }
]
dependencies = [
    "PySide6>=6.8",
    "playwright>=1.49",
    "rich>=13.9",
]

[project.urls]
Homepage = "https://github.com/cemtait/Posterfolio"
Repository = "https://github.com/cemtait/Posterfolio"
Issues = "https://github.com/cemtait/Posterfolio/issues"

[project.scripts]
posterfolio = "poster_montage_designer.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
poster_montage_designer = [
    "assets/icons/*.ico",
    "assets/icons/*.png",
    "ui/*.ui",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
